Move definition of nested classes that inherit enclosing class outside class definition. https://bugs.webkit.org/show_bug.cgi?id=113454

Patch by Han Shen <shenhan@google.com> on 2013-04-01
Reviewed by Benjamin Poulain.

HashMap.h does not build on GCC 4.8. Inside this file,
HashMapKeysProxy and HashMapValuesProxy are defined as nested
class inside HashMap - which is legal - the illegal part is that
these 2 classes inherit HashMap, that is the enclosing class, that
causes "reference to in-complete definition" error.

The fix is to move outside the definition of these 2 classes, and
leave only declaration part inside HashMap as is illustrated below -

  template class <typename T>
  class HashMap {
    ... ...
    ... ...
  private:
    class HashMapKeysProxy;

    // ERROR - nested class inherits enclosing class.
    class HashMapKeysProxy : private HashMap {
        ... ...
    };
    ... ...
    ... ...
    class HashMapKeysProxy : private HashMap {
        ... ...
    };
    ... ...
    ... ...
  };

Fixed as below:
  template class <typename T>
  class HashMap {
    ... ...
    ... ...
  private:
    class HashMapKeysProxy;
    class HashMapValuesProxy;

    ... ...
    ... ...
  };

  template <typename T>
  class HashMap<T>::HashMapKeysProxy : private HashMap<T> {
    ... ...
  };

  template <typename T>
  class HashMap<T>::HashMapValuesProxy : private HashMap<T> {
    ... ...
  };

* wtf/HashMap.h:
(HashMap):
(WTF): Factor out nested class definition from enclosing class.

Canonical link: https://commits.webkit.org/132032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147345 268f45cc-cd09-0410-ab3c-d52691b4dbfc